# feature-delivery-engine

./: .dockerignore  .gitignore  Dockerfile  Procfile  README.md  build.sh  entrypoint.sh  pyproject.toml  railway.toml  render.yaml
.fde/: context.md
alembic/: env.py
alembic/versions/: 249d9333c9b1_rename_repo_path_to_repo_url_add_branch_.py  2bbad823c230_make_service_id_nullable_on_workflows.py  b764bf473f5e_create_services_integrations_and_.py  c9ba215186c3_create_all_tables.py  e029ef956c20_add_pending_questions_to_workflows.py  e1a9a82f0512_add_pr_url_to_workflows.py
app/: main.py
app/agents/: base.py  code_reviewer.py  design_reviewer.py  frd_parser.py  implementer.py  models.py  pr_creator.py  state.py  task_planner.py  tech_designer.py
app/agents/tools/: codebase.py  repo_manager.py
app/core/: config.py  db.py  llm.py  logging.py  orm_base.py  telemetry.py
app/integrations/: github_client.py  github_routes.py  models.py  routes.py  schemas.py
app/orchestration/: pipeline.py
app/services/: models.py  routes.py  schemas.py
app/workflows/: models.py  routes.py  schemas.py
tests/: conftest.py  test_services.py
tests/agents/: test_base.py  test_code_reviewer.py  test_codebase_tools.py  test_design_reviewer.py  test_frd_parser.py  test_implementer.py  test_pipeline.py  test_pr_creator.py  test_repo_manager.py  test_task_planner.py  test_tech_designer.py
tests/integrations/: test_github_client.py
